--- a/sass/components/_follow.scss
+++ b/sass/components/_follow.scss
@@ -1,6 +1,6 @@
 /* Секція присоединяйтесь */
 .follow {
-    margin-left: 70px;
+    // margin-left: 70px;
 
     &__title {
         display: block;
