--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,34 +1,93 @@
 .hero {
     max-width: 1600px;
-    height: 600px;
+    // height: 600px;
     margin-left: auto;
     margin-right: auto;
 
-    padding-top: 200px;
-    padding-bottom: 200px;
+    padding-top: 118px;
+    padding-bottom: 118px;
     text-align: center;
 
     background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../images/img-bgd.jpg);
+        url(../../images/img-bgd_s.jpg);
     background-color: var(--hero-background-color);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 
+// для ретіна екранів мобільна версія
+    @media (min-device-pixel-ratio: 2),
+        (-webkit-min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+            background-image: linear-gradient(to right,
+                    rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)),
+                    url(../../images/img-bgd_s2x.jpg);
+        }
+
+        @media screen and (min-width: 768px) {
+            background-image: linear-gradient(to right,
+                    rgba(47, 48, 58, 0.4),
+                    rgba(47, 48, 58, 0.4)), 
+                    url(../../images/img-bgd_m.jpg);
+
+            // Для ретіна екранів планшетна версія
+            @media (min-device-pixel-ratio: 2),
+            (-webkit-min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                background-image: linear-gradient(to right,
+                        rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)),
+                    url(../../images/img-bgd_m2x.jpg);;
+            }
+        }
+        
+            @media screen and (min-width: 1200px) {
+                background-image: linear-gradient(to right,
+                        rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)),
+                    url(../../images/img-bgd.jpg);
+    
+            // Для ретіна екранів десктопна версія
+            @media (min-device-pixel-ratio: 2),
+            (-webkit-min-device-pixel-ratio: 2),
+            (min-resolution: 192dpi),
+            (min-resolution: 2dppx) {
+                background-image: linear-gradient(to right,
+                        rgba(47, 48, 58, 0.4),
+                        rgba(47, 48, 58, 0.4)),
+                    url(../../images/img-bgd_l2x.jpg);
+            }
+        }
+
+    @media screen and (min-width:1200px) {
+        padding-top: 200px;
+        padding-bottom: 200px;
+    }
+
+
     &__title {
-        width: 696px;
+        width: 360px;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 30px;
 
         font-weight: 900;
-        font-size: 44px;
-        line-height: 1.36;
+        font-size: 26px;
+        line-height: 1.62;
         letter-spacing: 0.06em;
         text-transform: uppercase;
         color: var(--secondary-text-color);
+        
+        @media screen and (min-width:1200px){
+            width: 696px;
+            font-size: 44px;
+            line-height: 1.36;
+        }
     }
 }
 
