--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,4 +1,19 @@
+html {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+
+
+
+}
+
 body {
+    // width: 100%;
+    // max-width: 100%;
+    // overflow-x: hidden;
+    overflow-y: hidden;
+    
+
     font-family: var(--main-font), sans-serif;
     font-weight: 400;
     font-size: 14px;
@@ -7,4 +22,8 @@ body {
     background-color: var(--secondary-text-color);
 
     color: var(--primary-text-color);
+
+    &.no-scroll {
+        overflow: hidden;
+    }
 }
