--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -27,7 +27,14 @@
         padding-bottom: 10px;
         padding-left: 29px;
 
+        margin-right: auto;
+        margin-left: auto;
+
+        
+        @media screen and (min-width:1200px) {
         margin-left: 12px;
+            
+        }
     }
 
     &__icon {
@@ -45,6 +52,7 @@
         line-height: 1.62;
         letter-spacing: 0.03em;
         background-color: var(--team-background-color);
+        box-shadow: none;
 
         color: var(--title-text-color);
 
