--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,29 +1,50 @@
 .cliets__title {
+    margin-bottom: 30px;
+
     font-weight: 700;
-    font-size: 36px;
+    font-size: 28px;
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
 
     color: var(--title-text-color);
+
+    @media screen and (min-width: 1200px) {
+        font-size: 36px;
+    }
 }
 
-.clients__box:not(:last-child) {
-    margin-right: 30px;
+// .clients__box:not(:last-child) {
+//     margin-right: 30px;
+// }
+
+.clients__box{
+    // display: flex;
+    // flex-wrap: wrap;
+    // gap: 30px;
+  
+
 }
+
 
 .clients__list {
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    // margin-top: 50px;
+
     display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
+    flex-wrap: wrap;
+    gap: 30px;
+    
 }
 
 .clients__item {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 170px;
+    // width: 170px;
+    width: 210px;
     height: 92px;
 
     border: 1px solid #AFB1B8;
@@ -31,6 +52,14 @@
     color: #AFB1B8;
 
     transition: color var(--anim), border-color var(--anim);
+
+    @media screen and (min-width:768px) {
+        width: 226px;
+    }
+
+    @media screen and (min-width:1200px) {
+        width: 170px;
+    }
 
     &:hover,
     &:focus {
