--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -1,12 +1,30 @@
 
 
 .contact {
-    display: flex;
-    align-items: center;
-    margin-left: auto;
+    display: none;
 
-    & .contact__item+.contact__item {
-        margin-left: 40px;
+    @media screen and (min-width:768px){
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-left: auto;
+
+
+        // align-items: center;
+        // margin-left: auto;
+        // margin-bottom: 10px;
+
+        // & .contact__item+.contact__item {
+        //     // margin-left: 40px;
+        //     margin-bottom: 10px;
+        // }
+
+    }
+
+    @media screen and (min-width:1200px) {
+        flex-direction: row;
+        gap: 30px;
+
     }
 
 }
@@ -21,8 +39,12 @@
     display: flex;
     align-items: center;
 
-    padding-top: 32px;
-    padding-bottom: 32px;
+    // padding-top: 32px;
+    // padding-bottom: 32px;
+
+   
+    // margin-bottom: 10px;
+   
 
     color: var(--primary-text-color);
     font-weight: 500;
