--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,6 +1,22 @@
 .container {
-    width: 1200px;
+    // width: 100%;
     padding: 0 15px;
     margin: 0 auto;
 
+    @media screen and (min-width: 320px) and (max-width: 480px) {
+        width: 100%;
+    }
+
+        @media screen and (min-width: 481px) and (max-width: 767px) {
+            width: 480px;
+        }
+
+    @media screen and (min-width: 768px) {
+        width: 768px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        width: 1200px;
+    }
 }
+
