--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -1,12 +1,26 @@
 .filters {
     display: flex;
-    justify-content: center;
- 
-    margin-bottom: 50px;
+    flex-wrap: wrap;
 
-    &__item+&__item {
-        margin-left: 8px;
+    gap: 15px 8px;
+    
+ 
+    // margin-bottom: 50px;
+    margin-bottom: 40px;
+
+
+
+    @media screen and (min-width: 768px) {
+        margin-bottom: 30px;
     }
+
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+    justify-content: center;
+    }
+    // &__item+&__item {
+    //     margin-left: 8px;
+    // }
 
 
 }
