--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,6 +1,10 @@
 .form {
-    width: 448px;
+    width: 370px;
     height: 342px;
+    
+    @media screen and (min-width:1200px) {
+            width: 448px;    
+    }
 
     &__label {
         display: block;
@@ -11,6 +15,8 @@
         letter-spacing: 0.01em;
 
         color: var(--primary-text-color);
+        
+
     }
 
     &__input {
