--- a/sass/components/_grid.scss
+++ b/sass/components/_grid.scss
@@ -1,21 +1,40 @@
 .grid {
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
 
     &__item {
-        width: 370px;
-        margin-right: 30px;
-        margin-bottom: 30px;
+        // width: 370px;
+        @media screen and (max-width:480px) {
+       
+        width: 100%;
+        }
+
+        @media screen and (min-width:768px) {
+            width: 354px;
+            // height: 100%;
+            
+        }
+
+        @media screen and (min-width:1200px) {
+            width: 370px;
+            // height: 100%;
+
+        }
+        
+                
+        // margin-right: 30px;
+        // margin-bottom: 30px;
     }
 
-    &__item:nth-child(3n) {
-        margin-right: 0;
+    // &__item:nth-child(3n) {
+    //     margin-right: 0;
 
-    }
+    // }
 
-    &__item:nth-last-child(-n + 3) {
-        margin-bottom: 0;
-    }
+    // &__item:nth-last-child(-n + 3) {
+    //     margin-bottom: 0;
+    // }
 
     &__link {
         display: block;
@@ -34,6 +53,24 @@
         display: block;
 
         overflow: hidden;
+
+        @media screen and (min-width:320px) and(max-width:479px) {
+            width: 100%;
+            height: 294px;
+        }
+       @media screen and (min-width:480px) {
+            width: 450px;
+       }
+    
+        @media screen and (min-width:768px) {
+            width: 354px;
+           
+        }
+    
+        @media screen and (min-width:1200px) {
+            width: 370px;
+        
+        }
     }
 
     &__card {
@@ -42,6 +79,13 @@
         padding-bottom: 20px;
         padding-left: 24px;
         border: 1px solid #EEEEEE;
+
+        &--grow{
+            @media screen and (min-width:768px) and (max-width: 1199px) {
+             padding-bottom: 56px;
+            }
+            
+        }
 
     }
 
@@ -70,6 +114,29 @@
     }
 
 }
+
+.grid_box {
+@media screen and (min-width:320px) and(max-width:479px) {
+        width: 100%;
+        height: 294px;
+    }
+
+    @media screen and (min-width:480px) {
+        width: 450px;
+    }
+
+    @media screen and (min-width:768px) {
+        width: 354px;
+
+    }
+
+    @media screen and (min-width:1200px) {
+        width: 370px;
+
+    }
+      
+}
+
 
 
 
