--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,8 +1,20 @@
 .header {
     border-bottom: 1px solid #ECECEC;
     &__container {
-            display: flex;
-            align-items: center;
+        padding-top: 16px;
+        padding-bottom: 16px;
+        display: flex;
+        align-items: center;
+
+        @media screen and (min-width: 768px) {
+            padding-top: 0;
+            padding-bottom: 0;
+                    
         }
+
+        
+    }
+
+   
 }
 
