--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,14 +2,23 @@
     font-family: "Raleway";
     font-style: normal;
     font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
+    // font-size: 26px;
+    // line-height: 1.19;
+
+    font-size: 24px;
+    line-height: 1.16;
+
     color: var(--logo-header-color);
     text-decoration: none;
 
     &--header {
+        @media screen and (min-width: 768px) {
+            margin-right: 88px;
+        }
+        @media screen and (min-width: 1200px) {
             margin-right: 93px;
         }
+    }
     
     &__accent {
         color: var(--accent-text-color);
