--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,8 +3,8 @@
     top: 50%;
     left: 50%;
 
-    width: 528px;
-    height: 581px;
+    width: 450px;
+    height: 609px;
 
     display: block;
     padding: 40px;
@@ -17,6 +17,12 @@
 
     transform: translate(-50%, -50%) scale(1.0);
     transition: transform var(--anim);
+
+    @media screen and (min-width:1200px) {
+        width: 528px;
+        height: 581px;
+
+    }
 
     &__close {
         position: absolute;
@@ -49,6 +55,7 @@
         font-weight: 700;
         font-size: 20px;
         line-height: 1.15;
+        text-align: center;
 
         color: var(--title-text-color);
     }
