--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,13 +1,21 @@
 .nav__list {
-    display: flex;
+    display: none;
 
-    font-weight: 500;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-
-    & .nav__item+.nav__item {
-        margin-left: 40px;
+    @media screen and(min-width:768px) {
+        display: flex;
+        gap: 50px;
+        
+        font-weight: 500;
+        line-height: 1.14;
+        letter-spacing: 0.02em;
+        
     }
+
+  
+
+    // & .nav__item+.nav__item {
+    //     margin-left: 40px;
+    // }
    
 }
 
