--- a/sass/components/_overlay.scss
+++ b/sass/components/_overlay.scss
@@ -10,10 +10,19 @@
     align-items: center;
     justify-content: center;
 
-    padding: 63px 24px;
+    padding: 77px 24px;
     background-color: rgba(33, 150, 243, 0.9);
 
     transition: transform var(--anim), opacity var(--anim);
+
+    
+    @media screen and (min-width:768px) {
+        padding-top: 49px;
+    }
+
+    @media screen and (min-width:1200px) {
+        padding: 63px 24px;
+    }
 
     &__descr {
         font-size: 18px;
