--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -1,9 +1,29 @@
 .subscribe {
-    margin-left: auto;
+    width: 100%;
+    // margin-left: auto;
+
+    @media screen and (min-width:768px) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+
+        padding-right: 152px;
+        padding-left: 166px;
+    }
+
+        @media screen and (min-width:1200px) {
+            justify-content: flex-start;
+            padding-right: 0;
+            padding-left: 0;
+            margin-left: 93px;
+        }
+    
 
     &__title {
         display: block;
         margin-bottom: 20px;
+        text-align: center;
         font-weight: 700;
         line-height: 1.14;
         text-transform: uppercase;
@@ -12,15 +32,22 @@
     }
 
     &__form {
-        display: flex;
+        @media screen and (min-width:768px) {
+            // display: flex;
+        }
     }
+        
+        
 
     &__input {
-        width: 358px;
+        width: 100%;
+        // width: 450px;
         height: 50px;
         padding-top: 15px;
         padding-bottom: 15px;
         padding-left: 16px;
+
+        margin-bottom: 20px;
 
         color: var(--secondary-text-color);
 
@@ -31,6 +58,14 @@
         background-color: var(--footer-background-color);
 
         transition: border var(--anim);
+
+        @media screen and (min-width:768px) {
+            width: 450px;
+        }
+
+        @media screen and (min-width:1200px) {
+            width: 358px;
+        }
     }
 
     &__input:focus-within,
