--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -3,34 +3,59 @@
     background-color: var(--team-background-color);
 
     &__title {
-        margin-bottom: 50px;
+        // margin-bottom: 50px;
+        margin-bottom: 30px;
+
         font-weight: 700;
-        font-size: 36px;
+        
+        font-size: 28px;
         line-height: 1.17;
         text-align: center;
 
         color: var(--title-text-color);
+
+        @media screen and (min-width: 1200px) {
+            font-size: 36px;
+            
+        }
     }
 
     &__list {
-        display: flex;
+         display: flex;
+         flex-wrap: wrap;
+         gap: 30px;
     }
 
     &__member{
+        width: 100%;
+
         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
         border-radius: 0px 0px 4px 4px;
         background-color: var(--secondary-text-color);
+
+        @media screen and (min-width: 768px){
+            width: 354px;
+        }
+
+        @media screen and (min-width: 1200px) {
+            width: 270px;
+        }
     }
 
     &__member+&__member {
-        margin-left: 30px;
+        // margin-left: 30px;
+
+        // margin-top: 30px;
     }
 
 }
 
+
   .team-card {
       padding-top: 30px;
-      padding-bottom: 30px;
+    //   padding-bottom: 30px;
+        padding-bottom: 24px;
+
 
     &__title {
         margin-bottom: 10px;
@@ -45,6 +70,7 @@
     
     &__position {
         margin-bottom: 16px;
+
         text-align: center;
         font-size: 16px;
         line-height: 1.19;
@@ -53,7 +79,23 @@
     }
   }
 
+.box__img{
+    @media screen and (min-width:320px){
+        width: 100%;
+        height: 460px;
+    }
 
+    @media screen and (min-width:768px) {
+        width: 354px;
+        height: 374px;
+    }
+
+    @media screen and (min-width:1200px) {
+        width: 270px;
+        height: 260px;
+    }
+
+}
 
 
 
