--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import './components/section';
 @import './components/container';
 @import './components/header';
+@import './components/mobile-menu';
 @import './components/logo';
 @import './components/navigation';
 @import './components/contact';
