--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -11,7 +11,7 @@
     background-image: linear-gradient(to right,
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)),
-        url(../../images/img-bgd_s.jpg);
+        url(././images/img-bgd_s.jpg);
     background-color: var(--hero-background-color);
     background-size: cover;
     background-position: center;
