--- a/css/main.css
+++ b/css/main.css
@@ -1156,7 +1156,7 @@ address {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 450px;
+  width: 100%;
   height: 609px;
   display: block;
   padding: 40px;
@@ -1176,6 +1176,11 @@ address {
   transition: -webkit-transform var(--anim);
   transition: transform var(--anim);
   transition: transform var(--anim), -webkit-transform var(--anim);
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .modal {
@@ -1218,9 +1223,11 @@ address {
   color: var(--title-text-color);
 }
 
-.form {
-  width: 370px;
-  height: 342px;
+@media screen and (min-width: 480px) {
+  .form {
+    width: 370px;
+    height: 342px;
+  }
 }
 @media screen and (min-width: 1200px) {
   .form {
