--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,6 +1,10 @@
 .form {
-    width: 370px;
-    height: 342px;
+
+    @media screen and (min-width:480px) {
+        width: 370px;
+        height: 342px;
+    }
+   
     
     @media screen and (min-width:1200px) {
             width: 448px;    
