--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,7 +3,7 @@
     top: 50%;
     left: 50%;
 
-    width: 450px;
+    width: 100%;
     height: 609px;
 
     display: block;
@@ -17,6 +17,11 @@
 
     transform: translate(-50%, -50%) scale(1.0);
     transition: transform var(--anim);
+
+    @media screen and (min-width:480px) {
+            width:450px;
+               
+        }
 
     @media screen and (min-width:1200px) {
         width: 528px;
