--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -11,6 +11,8 @@
     align-items: center;
     justify-content: center;
 
+    z-index: 100;
+
     background-color: var(--secondary-text-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
