--- a/sass/components/_follow.scss
+++ b/sass/components/_follow.scss
@@ -1,7 +1,10 @@
 /* Секція присоединяйтесь */
 .follow {
-    // margin-left: 70px;
+    
 
+    @media screen and (min-width:1200px){
+        margin-left: 70px;
+    }
     &__title {
         display: block;
         margin-bottom: 20px;
