--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,20 +4,29 @@
     background-color: var(--footer-background-color);
 
    &__box {
+    
         display: flex;
         flex-wrap: wrap;
         gap: 60px;
-        justify-content: center;
+        justify-content: space-around;
         text-align: center;
 
-        @media screen and (min-width:1200px) {
-        flex-wrap: nowrap;
+        @media screen and (max-width:1199px) {
+        // flex-wrap: nowrap;
         gap: 70px;
+        // margin: 0;
 
-        text-align: start;
-        align-items: baseline;
+        // text-align: start;
+        // align-items: baseline;
         }
-        
+
+        @media screen and (min-width:1200px){
+            flex-wrap: nowrap;
+    
+
+            text-align: start;
+            align-items: baseline;
+        }
         
     }
 }
