--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -71,7 +71,7 @@
 
 
     &__title {
-        width: 360px;
+        width: 300px;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 30px;
@@ -82,6 +82,11 @@
         letter-spacing: 0.06em;
         text-transform: uppercase;
         color: var(--secondary-text-color);
+
+        @media screen and (min-width: 480px) {
+            width: 360px;     
+        }
+
         
         @media screen and (min-width:1200px){
             width: 696px;
