--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -4,6 +4,8 @@
     left: 0;
     width: 100%;
     height: 100%;
+
+    z-index: 1000;
     background-color: rgba(0, 0, 0, 0.2);
 
     opacity: 1;
