--- a/sass/components/_grid.scss
+++ b/sass/components/_grid.scss
@@ -56,7 +56,7 @@
 
         @media screen and (min-width:320px) and(max-width:479px) {
             width: 100%;
-            height: 294px;
+            // height: 294px;
         }
        @media screen and (min-width:480px) {
             width: 450px;
@@ -116,13 +116,13 @@
 }
 
 .grid_box {
-@media screen and (min-width:320px) and(max-width:479px) {
-        width: 100%;
-        height: 294px;
-    }
+// @media screen and (min-width:320px) and(max-width:479px) {
+//         width: 100%;
+//         // height: 294px;
+//     }
 
-    @media screen and (min-width:480px) {
-        width: 450px;
+    @media screen and (min-width:320px) {
+        width: 100%;
     }
 
     @media screen and (min-width:768px) {
