--- a/sass/components/_subscribe.scss
+++ b/sass/components/_subscribe.scss
@@ -1,5 +1,6 @@
 .subscribe {
-    width: 100%;
+
+    // width: 100%;
     // margin-left: auto;
 
     @media screen and (min-width:768px) {
@@ -12,11 +13,17 @@
         padding-left: 166px;
     }
 
+        @media screen and (max-width:1199px) {
+            // justify-content: flex-start;
+            width: 100%;
+            
+        }
+
         @media screen and (min-width:1200px) {
-            justify-content: flex-start;
+            justify-content: start;
             padding-right: 0;
             padding-left: 0;
-            margin-left: 93px;
+            margin-left: auto;
         }
     
 
