--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -82,17 +82,17 @@
 .box__img{
     @media screen and (min-width:320px){
         width: 100%;
-        height: 460px;
+        // height: 460px;
     }
 
     @media screen and (min-width:768px) {
         width: 354px;
-        height: 374px;
+        // height: 374px;
     }
 
     @media screen and (min-width:1200px) {
         width: 270px;
-        height: 260px;
+        // height: 260px;
     }
 
 }
