--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -11,6 +11,11 @@
     color: var(--logo-header-color);
     text-decoration: none;
 
+    @media screen and (min-width:1200px) {
+        font-size: 26px;
+        line-height: 1.19;
+    }
+
     &--header {
         @media screen and (min-width: 768px) {
             margin-right: 88px;
